Minor overflow fix

--- a/src/sass/components/_about.scss
+++ b/src/sass/components/_about.scss
@@ -5,7 +5,7 @@
     margin: 0 auto;
 
     @include respond(phone-secondary) {
-        height: 100rem;
+        height: 105rem;
     }
 
     @media only screen and(max-width: $custom-media-query-1) {
