--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -1,5 +1,5 @@
 .section-about {
-    margin-top: -20vh;
+    margin-top: -17vh;
     padding: 27.5rem 11rem;
     background: $color-gray-light;
 
